DSE 5.1.0
 * Update java driver to DSE driver version 1.2.0-eap5-SNAPSHOT (APOLLO-357)
 * Fix AssertionError in Continuous Paging Request on select count(*) query (APOLLO-387)
 * Update internal DSE driver and fix formatting for Duration type (APOLLO-417)
 * Replace open source Python driver with Datastax Enterprise driver (APOLLO-349)
 * Fix OutOfSpaceTest broken by APOLLO-227 (APOLLO-350)
 * Allow to add IndexRestrictions to SelectStatement in an immutable way (APOLLO-323)
 * Allow grammar extensions to be added to cqlsh for tab completion (APOLLO-295)
 * Improve compaction performance (APOLLO-123)
 * Add client warning to SASI index (APOLLO-93)
 * Cqlsh copy-from: add support for UNSET values (APOLLO-4)
 * Improve error message for incompatible authn/authz config (APOLLO-226)
 * Continuous paging (APOLLO-3, APOLLO-267, APOLLO-277, APOLLO-291, APOLLO-312, APOLLO-316)
 * Added show-queries, query-log-file and no-progress log options to cassandra-stress (APOLLO-41)
 * Allow large partition generation in cassandra-stress user mode (APOLLO-35)
 * Optimize VIntCoding and BufferedDataOutputStreamPlus (APOLLO-49)
 * Improve metrics and reduce overhead under contention (APOLLO-81)
 * Make SinglePartitionReadCommand::queriesMulticellType() faster (APOLLO-117)
 * Accept internal resource name in GRANT/REVOKE statements (APOLLO-113)
 * Improve StatementRestrictions::getPartitionKeys() execution speed (APOLLO-115)
 * Move responsibility for qualifying ks in authz stmts to IResource (APOLLO-76)
 * Insert default superuser role with fixed timestamp (APOLLO-18)
 * Make Permissions extensible (APOLLO-26)
 * Make IResource more easily extensible (APOLLO-26)
 * Add method to IAuthenticator to login by user as well as by role (APOLLO-70)
 * Add private protocol version (APOLLO-2)
Merged from DSE 5.0.x:
 * Disable preemptive sstable opening if sstable_preemptive_open_interval_in_mb <= 0,
   and warn about high GC pressure for values below 4 (APOLLO-386)